# THUAI9-Test-Viz

./: README.md  warchess_plan (1).md
THUAI9-Backend-master/: ARCHITECTURE.md  README.md  docker-compose.yml
THUAI9-Backend-master/client/: CLIENT.md
THUAI9-Backend-master/client/client/: client.sln
THUAI9-Backend-master/client/client/client/: GameMessage.cs  Listener.cs  Player.cs  Program.cs  State.cs  utils.cs
THUAI9-Backend-master/client/client_cpp/: CMakeLists.txt  Converter.h  State.h  StrategyFactory.h  compile_proto.bat  main.cpp  utils.h
THUAI9-Backend-master/client/client_gRPC/: API.md  Dockerfile  README.md  README_gRPC.md  converter.py  env.py  grpc_client.py  local_client.py  local_input.py  message.proto  message_pb2.py  message_pb2_grpc.py  requirements.txt  strategy_factory.py  test_local.py  utils.py
THUAI9-Backend-master/client/client_gRPC/BoardCase/: case1.txt
THUAI9-Backend-master/client/client_gRPC/dev_test/: PLAN.md  README.md  main.py
THUAI9-Backend-master/demo/: GameDemo.sln
THUAI9-Backend-master/demo/GameDemo/: ActionSet.cs  Board.cs  CommonPiece.cs  Game.cs  Piece.cs  Player.cs  Point.cs  Program.cs  Visualizers.cs
THUAI9-Backend-master/server/: Dockerfile  SERVER.md
THUAI9-Backend-master/server/server/server/: FrontClasses.cs  GameEngine.cs  GameMessage.cs  JsonModels.cs  LocalInput.cs  LogConverter.cs  Piece.cs  Player.cs  Program.cs  ProtoConverter.cs  Readme.md  ServerCommunicator.cs  board.cs  env.cs  log.json  server.csproj  server.sln  utils.cs  warchess_plan (1).md  调用流程说明_通信组.md
(+10 files in other folders)
